@@ -9,21 +9,30 @@ include Reek
 include Reek::Smells
 
 describe LargeClass, 'when exceptions are listed' do
-
   before(:each) do
-    @ctx = ClassContext.create(StopContext.new, s(:null, :Humungous))
-    30.times { |num| @ctx.record_method("method#{num}") }
+    @class_name = 'Humungous'
+    src = <<EOS
+class #{@class_name}
+  def me01x()3 end;def me02x()3 end;def me03x()3 end;def me04x()3 end;def me05x()3 end
+  def me11x()3 end;def me12x()3 end;def me13x()3 end;def me14x()3 end;def me15x()3 end
+  def me21x()3 end;def me22x()3 end;def me23x()3 end;def me24x()3 end;def me25x()3 end
+  def me31x()3 end;def me32x()3 end;def me33x()3 end;def me34x()3 end;def me35x()3 end
+  def me41x()3 end;def me42x()3 end;def me43x()3 end;def me44x()3 end;def me45x()3 end
+  def me51x()3 end
+end
+EOS
+    @ctx = ClassContext.from_s(src)
     @config = LargeClass.default_config
   end
 
   it 'should ignore first excepted name' do
-    @config[LargeClass::EXCLUDE_KEY] = ['Humungous']
+    @config[LargeClass::EXCLUDE_KEY] = [@class_name]
     lc = LargeClass.new(@config)
     lc.examine(@ctx).should == false
   end
 
   it 'should ignore second excepted name' do
-    @config[LargeClass::EXCLUDE_KEY] = ['Oversized', 'Humungous']
+    @config[LargeClass::EXCLUDE_KEY] = ['Oversized', @class_name]
     lc = LargeClass.new(@config)
     lc.examine(@ctx).should == false
   end
@@ -37,7 +46,7 @@ end
 
 describe LargeClass, 'checking source code' do
 
-  describe 'counting instance variables' do
+  context 'counting instance variables' do
     it 'should not report empty class' do
       ClassContext.from_s('class Empty;end').should have(0).variable_names
     end
@@ -68,7 +77,7 @@ EOS
     end
   end
 
-  describe 'counting methods' do
+  context 'counting methods' do
     it 'should not report empty class' do
       ClassContext.from_s('class Empty;end').num_methods.should == 0
     end
@@ -106,6 +115,22 @@ class Full
 end
 EOS
       src.should reek_of(:LargeClass)
+    end
+  end
+
+  context 'with a nested module' do
+    it 'stops at a nested module' do
+      src = <<EOS
+class Full
+  def me01x()3 end;def me02x()3 end;def me03x()3 end;def me04x()3 end;def me05x()3 end
+  def me11x()3 end;def me12x()3 end;def me13x()3 end;def me14x()3 end;def me15x()3 end
+  def me21x()3 end;def me22x()3 end;def me23x()3 end;def me24x()3 end;def me25x()3 end
+  def me31x()3 end;def me32x()3 end;def me33x()3 end;def me34x()3 end;def me35x()3 end
+  module Hidden; def me41x()3 end;def me42x()3 end;def me43x()3 end;def me44x()3 end;def me45x()3 end; end
+  def me51x()3 end
+end
+EOS
+      src.should_not reek_of(:LargeClass)
     end
   end
 end
