@@ -2,6 +2,9 @@
 
 === Minor Changes
 * New smell: Attribute (disabled by default)
+* Expanded DataClump to check modules (#9)
+* Fixed LargeClass to ignore inner classes and modules
+* Fixed LargeClass to ignore singleton methods
 * Removed support for MyClass.should_not reek due to ParseTree EOL
 * Removed internal requiring of 'rubygems'
 
